force-app/main/default/objects/DealEntry__c/DealEntry__c.object-meta.xml
<CustomObject>
    <description>Record of a recorded deal.</description>
    <label>Deal Entry</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{00000}</displayFormat>
        <label>Deal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>