force-app/main/default/objects/DealEntry__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Broker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Broker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Entries (Broker)</relationshipLabel>
    <relationshipName>Deal_Entries_Broker</relationshipName>
    <type>Lookup</type>
</CustomField>