force-app/main/default/objects/DealEntry__c/fields/Broker_Fee_UOM__c.field-meta.xml
<CustomField>
    <fullName>Broker_Fee_UOM__c</fullName>
    <defaultValue>&quot;$/mWh&quot;</defaultValue>
    <label>Primary Broker Fee UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_Of_Measure</valueSetName>
    </valueSet>
</CustomField>