force-app/main/default/objects/DealEntry__c/fields/Broker_Margin__c.field-meta.xml
<CustomField>
    <fullName>Broker_Margin__c</fullName>
    <defaultValue>IF($RecordType.Name  &lt;&gt; &apos;Revenue&apos;, Null, 0.00)</defaultValue>
    <label>Primary Broker Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>