force-app/main/default/objects/DealEntry__c/fields/Broker_Plan__c.field-meta.xml
<CustomField>
    <fullName>Broker_Plan__c</fullName>
    <label>Primary Broker Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Broker_Payment_Plan</valueSetName>
    </valueSet>
</CustomField>