force-app/main/default/objects/DealEntry__c/fields/Broker_Volume_Type__c.field-meta.xml
<CustomField>
    <fullName>Broker_Volume_Type__c</fullName>
    <label>Broker Volume Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contractual</fullName>
            </value>
            <value>
                <fullName>Actual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>