force-app/main/default/objects/DealEntry__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Add any additional comments that are not related to reportable fields.</description>
    <inlineHelpText>If you need reportable fields, please go to IT team and they can be added.</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>