force-app/main/default/objects/DealEntry__c/fields/Commissions_Type__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Type__c</fullName>
    <description>Field added under PBI 160189</description>
    <label>Commissions Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Commissions_Type</valueSetName>
    </valueSet>
</CustomField>