force-app/main/default/objects/DealEntry__c/fields/Contracted_REC_Volume__c.field-meta.xml
<CustomField>
    <fullName>Contracted_REC_Volume__c</fullName>
    <description>The RECs purchased for the contract</description>
    <label>Contracted REC Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>