force-app/main/default/objects/DealEntry__c/fields/Contracted_Service_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Service_Accounts__c</fullName>
    <description>To capture the number of accounts contracted.</description>
    <label>Contracted Service Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>