force-app/main/default/objects/DealEntry__c/fields/Contracted_Volume__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Volume__c</fullName>
    <label>Contracted Volume</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>