force-app/main/default/objects/DealEntry__c/fields/Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Execution_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Execution Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>