force-app/main/default/objects/DealEntry__c/fields/Execution_Price__c.field-meta.xml
<CustomField>
    <fullName>Execution_Price__c</fullName>
    <label>Execution Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>