force-app/main/default/objects/DealEntry__c/fields/Expected_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Expected_Gross_Margin__c</fullName>
    <formula>CASE( TEXT(Product_Type__c), &apos;CRR Revenue&apos;, Revenue__c ,Sales_Margin__c * Contracted_Volume__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>