force-app/main/default/objects/DealEntry__c/fields/Heat_Rate__c.field-meta.xml
<CustomField>
    <fullName>Heat_Rate__c</fullName>
    <label>Heat Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>