force-app/main/default/objects/DealEntry__c/fields/Hold_Payment__c.field-meta.xml
<CustomField>
    <fullName>Hold_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate if we should withhold payment from the sales rep until the deal starts flowing.</description>
    <label>Hold Payment</label>
    <type>Checkbox</type>
</CustomField>