force-app/main/default/objects/DealEntry__c/fields/Hold_Payment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Hold_Payment_Reason__c</fullName>
    <label>Hold Payment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>No ETF</fullName>
            </value>
            <value>
                <fullName>Change in Role</fullName>
            </value>
            <value>
                <fullName>Change in Sales %</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>