force-app/main/default/objects/DealEntry__c/fields/Market2__c.field-meta.xml
<CustomField>
    <fullName>Market2__c</fullName>
    <label>Market</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAISO</fullName>
            </value>
            <value>
                <fullName>ERCOT</fullName>
            </value>
            <value>
                <fullName>ISONE</fullName>
            </value>
            <value>
                <fullName>MISO</fullName>
            </value>
            <value>
                <fullName>NYISO</fullName>
            </value>
            <value>
                <fullName>PJM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>