force-app/main/default/objects/DealEntry__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Choose a market for this deal.</inlineHelpText>
    <label>Market</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Deal Entries</relationshipLabel>
    <relationshipName>Deal_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>