force-app/main/default/objects/DealEntry__c/fields/Operating_Company__c.field-meta.xml
<CustomField>
    <fullName>Operating_Company__c</fullName>
    <label>Operating Company</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Operating_Company</valueSetName>
    </valueSet>
</CustomField>