force-app/main/default/objects/DealEntry__c/fields/Original_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Contract_ID__c</fullName>
    <label>Original Contract ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>