force-app/main/default/objects/DealEntry__c/fields/Original_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Original_Contract_Number__c</fullName>
    <label>Original Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>