force-app/main/default/objects/DealEntry__c/fields/Paid_on_Holdover__c.field-meta.xml
<CustomField>
    <fullName>Paid_on_Holdover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid on Holdover</label>
    <type>Checkbox</type>
</CustomField>