force-app/main/default/objects/DealEntry__c/fields/Par_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Par_Percentage__c</fullName>
    <label>Par Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>