force-app/main/default/objects/DealEntry__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>DealEntry__c</referenceTo>
    <relationshipLabel>Deal Entries</relationshipLabel>
    <relationshipName>ParentDealEntry</relationshipName>
    <type>Lookup</type>
</CustomField>