force-app/main/default/objects/DealEntry__c/fields/Primary_Sales_Person_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Person_Percentage__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Primary Salesperson Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>