force-app/main/default/objects/DealEntry__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Deal_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
            <value>
                <fullName>Index</fullName>
            </value>
            <value>
                <fullName>REC</fullName>
            </value>
            <value>
                <fullName>Block Hedge</fullName>
            </value>
            <value>
                <fullName>PAR Hedge</fullName>
            </value>
            <value>
                <fullName>Gas Lock</fullName>
            </value>
            <value>
                <fullName>PAR</fullName>
            </value>
            <value>
                <fullName>Heat Rate</fullName>
            </value>
            <value>
                <fullName>Block and Index</fullName>
            </value>
            <value>
                <fullName>CRR Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>