force-app/main/default/objects/DealEntry__c/fields/RA_Rate__c.field-meta.xml
<CustomField>
    <fullName>RA_Rate__c</fullName>
    <label>RA Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>