force-app/main/default/objects/DealEntry__c/fields/RPS_Rate__c.field-meta.xml
<CustomField>
    <fullName>RPS_Rate__c</fullName>
    <defaultValue>IF($RecordType.Name  = &apos;CAISO Standard Deal&apos;, Null, 0.00)</defaultValue>
    <label>RPS Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>