force-app/main/default/objects/DealEntry__c/fields/RPS_Rate_UOM__c.field-meta.xml
<CustomField>
    <fullName>RPS_Rate_UOM__c</fullName>
    <label>RPS Rate UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_Of_Measure</valueSetName>
    </valueSet>
</CustomField>