force-app/main/default/objects/DealEntry__c/fields/Sales_Margin__c.field-meta.xml
<CustomField>
    <fullName>Sales_Margin__c</fullName>
    <label>Sales Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>