force-app/main/default/objects/DealEntry__c/fields/Sales_Margin_UOM__c.field-meta.xml
<CustomField>
    <fullName>Sales_Margin_UOM__c</fullName>
    <label>Sales Margin UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_Of_Measure</valueSetName>
    </valueSet>
</CustomField>