force-app/main/default/objects/DealEntry__c/fields/Secondary_Broker_Fee_UOM__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Broker_Fee_UOM__c</fullName>
    <description>The unit of measurement for secondary broker Margin (e.g. $/MWh or $/kWh)</description>
    <label>Secondary Broker Fee UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_Of_Measure</valueSetName>
    </valueSet>
</CustomField>