force-app/main/default/objects/DealEntry__c/fields/Secondary_Broker_Margin__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Broker_Margin__c</fullName>
    <description>To capture second broker margin associated with the deal</description>
    <label>Secondary Broker Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>