force-app/main/default/objects/DealEntry__c/fields/Secondary_Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Broker_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To capture second broker associated with the deal</description>
    <label>Secondary Broker Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Entries (Secondary Broker Name)</relationshipLabel>
    <relationshipName>Deal_Entries1</relationshipName>
    <type>Lookup</type>
</CustomField>