force-app/main/default/objects/DealEntry__c/fields/Secondary_Broker_Plan__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Broker_Plan__c</fullName>
    <description>The type of plan that the secondary broker has for the deal, e.g. Upfront, Upfront/Split Residual, Residual, Holdover</description>
    <label>Secondary Broker Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Broker_Payment_Plan</valueSetName>
    </valueSet>
</CustomField>