force-app/main/default/objects/DealEntry__c/fields/Secondary_Broker_Upfront_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Broker_Upfront_Percentage__c</fullName>
    <description>Upfront % of the expected secondary broker margin</description>
    <label>Secondary Broker Upfront Percentage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>