force-app/main/default/objects/DealEntry__c/fields/Secondary_Broker_Upfront_Split_Residual__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Broker_Upfront_Split_Residual__c</fullName>
    <description>How the upfront amortization is split, a specified % is applied to upfront and the remaining % is paid out</description>
    <label>Secondary Broker Upfront Split Residual</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>