force-app/main/default/objects/DealEntry__c/fields/Secondary_Paid_on_Holdover__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Paid_on_Holdover__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A flag to indicate that the secondary broker has negotiated to be paid on the hold-over part of the deal as well as on the nominal deal period.</description>
    <label>Paid on Holdover</label>
    <type>Checkbox</type>
</CustomField>