force-app/main/default/objects/DealEntry__c/fields/Secondary_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Salesperson</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Secondary Sales Person must have a Sales Profile.</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Sales Profile</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Secondary_Sales_People</relationshipName>
    <type>Lookup</type>
</CustomField>