force-app/main/default/objects/DealEntry__c/fields/Secondary_Sales_Person_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sales_Person_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Secondary Salesperson Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>