force-app/main/default/objects/DealEntry__c/fields/Settlement_Location__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Location__c</fullName>
    <defaultValue>IF($RecordType.Name = &apos;Incremental Hedge&apos;, &apos;Trade Hub&apos;, &apos;&apos;)</defaultValue>
    <label>Settlement Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Load Zone</fullName>
            </value>
            <value>
                <fullName>Trade Hub</fullName>
            </value>
            <value>
                <fullName>Henry Hub</fullName>
            </value>
            <value>
                <fullName>Houston Ship Channel</fullName>
            </value>
            <value>
                <fullName>Waha</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>