force-app/main/default/objects/DealEntry__c/fields/Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_Months__c</fullName>
    <formula>((YEAR(End_Date__c) - YEAR(Start_Date__c))*12) + (MONTH(End_Date__c) - MONTH(Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>