force-app/main/default/objects/DealEntry__c/fields/Upfront_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Percentage__c</fullName>
    <label>Primary Upfront Percentage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>