force-app/main/default/objects/DealEntry__c/fields/Upfront_Split_Residual__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Split_Residual__c</fullName>
    <label>Primary Upfront Split Residual</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>