force-app/main/default/objects/DealEntry__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Salesperson</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The salesperson must have a sales profile.</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Sales Profile</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_People</relationshipName>
    <type>Lookup</type>
</CustomField>