force-app/main/default/objects/DealEntry__c/fields/Voluntary_REC_Broker_TTW__c.field-meta.xml
<CustomField>
    <fullName>Voluntary_REC_Broker_TTW__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voluntary REC Broker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Broker</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Entries (Voluntary REC Broker)</relationshipLabel>
    <relationshipName>Deal_Entries_VolBroker</relationshipName>
    <type>Lookup</type>
</CustomField>