force-app/main/default/objects/DealEntry__c/fields/Voluntary_REC_Expected_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Voluntary_REC_Expected_Gross_Margin__c</fullName>
    <description>The expected gross margin of the voluntary REC on the opportunity.</description>
    <formula>Contracted_REC_Volume__c  *  Voluntary_REC_Sales_Margin_TTW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voluntary REC Expected Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>