force-app/main/default/objects/DealEntry__c/fields/Voluntary_REC_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Voluntary_REC_Percentage__c</fullName>
    <label>Voluntary REC Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>