force-app/main/default/objects/DealEntry__c/fields/Voluntary_REC_Product__c.field-meta.xml
<CustomField>
    <fullName>Voluntary_REC_Product__c</fullName>
    <label>Voluntary REC Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National - Any Tech</fullName>
            </value>
            <value>
                <fullName>National Green-e</fullName>
            </value>
            <value>
                <fullName>National Hydro</fullName>
            </value>
            <value>
                <fullName>National Wind</fullName>
            </value>
            <value>
                <fullName>ISONE Class I</fullName>
            </value>
            <value>
                <fullName>MA CES-E</fullName>
            </value>
            <value>
                <fullName>ME Class II</fullName>
            </value>
            <value>
                <fullName>NY REC</fullName>
            </value>
            <value>
                <fullName>PJM EFEC</fullName>
            </value>
            <value>
                <fullName>PJM TRI</fullName>
            </value>
            <value>
                <fullName>TX Project REC</fullName>
            </value>
            <value>
                <fullName>TX Solar</fullName>
            </value>
            <value>
                <fullName>TX Wind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>