force-app/main/default/objects/DealEntry__c/fields/Voluntary_REC_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Voluntary_REC_Purchase_Price__c</fullName>
    <label>Voluntary REC Purchase Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>