force-app/main/default/objects/DealEntry__c/fields/Voluntary_REC_Purchase_Price_UOM__c.field-meta.xml
<CustomField>
    <fullName>Voluntary_REC_Purchase_Price_UOM__c</fullName>
    <label>Voluntary REC Purchase Price UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_Of_Measure</valueSetName>
    </valueSet>
</CustomField>