force-app/main/default/objects/DealEntry__c/fields/Voluntary_REC_Sales_Margin_TTW__c.field-meta.xml
<CustomField>
    <fullName>Voluntary_REC_Sales_Margin_TTW__c</fullName>
    <label>Voluntary REC Sales Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>