force-app/main/default/objects/DealEntry__c/fields/Zones__c.field-meta.xml
<CustomField>
    <fullName>Zones__c</fullName>
    <description>Select the type of Market Congestion Zones</description>
    <label>Zones</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Market2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LZ_Houston</fullName>
            </value>
            <value>
                <fullName>LZ_North</fullName>
            </value>
            <value>
                <fullName>LZ_South</fullName>
            </value>
            <value>
                <fullName>LZ_West</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>ME</fullName>
            </value>
            <value>
                <fullName>NEMA</fullName>
            </value>
            <value>
                <fullName>NH</fullName>
            </value>
            <value>
                <fullName>RI</fullName>
            </value>
            <value>
                <fullName>SEMA</fullName>
            </value>
            <value>
                <fullName>VT</fullName>
            </value>
            <value>
                <fullName>WCMA</fullName>
            </value>
            <value>
                <fullName>AMIL</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>J</fullName>
            </value>
            <value>
                <fullName>AECO</fullName>
            </value>
            <value>
                <fullName>AEP</fullName>
            </value>
            <value>
                <fullName>APCO</fullName>
            </value>
            <value>
                <fullName>ATSI</fullName>
            </value>
            <value>
                <fullName>BGE</fullName>
            </value>
            <value>
                <fullName>CEC</fullName>
            </value>
            <value>
                <fullName>ComEd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>