force-app/main/default/objects/DealEntry__c/recordTypes/CAISO_Standard_Deal.recordType-meta.xml
<RecordType>
    <fullName>CAISO_Standard_Deal</fullName>
    <active>true</active>
    <description>Use this type for all New / Renewal / Adds for Fixed and Index Products in CAISO</description>
    <label>CAISO Standard Deal</label>
</RecordType>