force-app/main/default/objects/DealEntry__c/recordTypes/Heat_Rate.recordType-meta.xml
<RecordType>
    <fullName>Heat_Rate</fullName>
    <active>true</active>
    <description>Use this for all Heat Rate base products.</description>
    <label>Heat Rate</label>
</RecordType>