force-app/main/default/objects/DealEntry__c/recordTypes/Incremental_Hedge.recordType-meta.xml
<RecordType>
    <fullName>Incremental_Hedge</fullName>
    <active>true</active>
    <description>Use this type for Blocks and Gas Locks, but not Par Layers</description>
    <label>Incremental Hedge</label>
</RecordType>