force-app/main/default/objects/DealEntry__c/recordTypes/Par_Layer.recordType-meta.xml
<RecordType>
    <fullName>Par_Layer</fullName>
    <active>true</active>
    <description>Use this type for adding Par Layers to a Par Deal</description>
    <label>Par Layer</label>
</RecordType>