force-app/main/default/objects/DealEntry__c/recordTypes/REC_Deal.recordType-meta.xml
<RecordType>
    <fullName>REC_Deal</fullName>
    <active>true</active>
    <description>Use this type for capturing all REC deals regardless of commodity contract.</description>
    <label>REC Deal</label>
</RecordType>