force-app/main/default/objects/DealEntry__c/recordTypes/Revenue.recordType-meta.xml
<RecordType>
    <fullName>Revenue</fullName>
    <active>true</active>
    <description>Use this for Revenue deals</description>
    <label>Revenue</label>
</RecordType>